Fix gap between sections for responsive

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,10 @@ $black-color: rgb(25,25,25);
       font-size: 8px
     }
   }
+
+  .vgap {
+    margin-bottom: 50px;
+  }
 }
 
 @media (min-width: 576px) {
@@ -53,6 +57,10 @@ $black-color: rgb(25,25,25);
       font-weight: normal;
       font-size: 8px
     }
+  }
+
+  .vgap {
+    margin-bottom: 100px;
   }
 }
 
@@ -81,6 +89,10 @@ $black-color: rgb(25,25,25);
       font-size: 12px
     }
   }
+
+  .vgap {
+    margin-bottom: 200px;
+  }
 }
 
 // Large devices (desktops, 992px and up)
@@ -107,6 +119,10 @@ $black-color: rgb(25,25,25);
       font-weight: normal;
       font-size: 18px
     }
+  }
+  
+  .vgap {
+    margin-bottom: 300px;
   }
 }
 
@@ -250,7 +266,6 @@ a:hover {
 }
 
 .centerPage {
-  margin-top: 204px;
   font-size: 36px;
   
   p {
@@ -262,7 +277,6 @@ a:hover {
     color: $primary-color;
     font-size: 56px;
     margin-top: 72px;
-    margin-bottom: 100px;
   }
 }
 
@@ -274,7 +288,6 @@ a:hover {
 .workPanel {
   display: flex;
   text-align: left;
-  margin-bottom: 298px;
   align-items: flex-end;
 
   h4 {
@@ -352,7 +365,7 @@ a:hover {
   background-image: radial-gradient(circle at 65% 50%,rgba(0,0,0,0.49),rgb(0,0,0) 50%);
 
   img {
-    width: 40%;
+    width: 40% !important;
     position: absolute;
     top: 50px;
     left: 0;
@@ -434,10 +447,6 @@ a:hover {
       margin-bottom: 0;
     }
   }
-}
-
-.row > div {
-  margin-bottom: 60px;
 }
 
 .bio {
